--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -10,6 +10,11 @@
 .projects .head-title {
     color: var(--main-color);
     background-color: var(--light-color);
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
 }
 
 .projects .content {
@@ -33,6 +38,11 @@
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
 }
 
 .projects .content .p-card .name {
@@ -135,6 +145,11 @@
     align-items: center;
     overflow: hidden;
     position: relative;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
 }
 
 .projects .content .more::after {
