--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -5,6 +5,11 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
 }
 
 .skills .head-title {
